Remade and improoved tcp code but must add path

--- a/src/index.html
+++ b/src/index.html
@@ -36,11 +36,11 @@
       <div style="overflow-y: scroll; height: 400px" id="messages"></div>
       <br />
       <form class="row" id="chat-form">
-        <input type="file" id="fileInput" accept="image/*" />
+        <input type="file" id="fileInput" />
         <input
           id="message-input"
           minlength="1"
-          placeholder="Enter a name..."
+          placeholder="Enter a message..."
           required
         />
         <button type="submit">Send</button>
