--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tauri App</title>
-    <script type="module" src="/main.js" defer></script>
+    <script src="/main.js" defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <style>
       .logo.vanilla:hover {
@@ -18,7 +18,7 @@
       var element = document.createElement("a");
       element.setAttribute(
         "href",
-        "data:text/plain;charset=utf-8," + encodeURIComponent(text)
+        "data:application/octet-stream;base64," + text
       );
       element.setAttribute("download", filename);
 
@@ -36,15 +36,12 @@
       <div style="overflow-y: scroll; height: 400px" id="messages"></div>
       <br />
       <form class="row" id="chat-form">
-        <input type="file" id="fileInput" />
-        <input
-          id="message-input"
-          minlength="1"
-          placeholder="Enter a message..."
-          required
-        />
+        <input id="message-input" placeholder="Enter a message..." />
         <button type="submit">Send</button>
       </form>
+      <button id="fileInput" onclick="getFile()">
+        Click to select image/gif
+      </button>
     </div>
   </body>
 </html>
