Added connected clients

--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,8 @@
         <input id="message-input" placeholder="Enter a message..." />
         <button type="submit">Send</button>
       </form>
-      <button id="fileInput" onclick="getFile()">
-        Click to select image/gif
-      </button>
+      <button id="fileInput" onclick="getFile()">Click to select file</button>
+      <div id="connected_clients"></div>
     </div>
   </body>
 </html>
