Fixed some things inc file names and drop

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,9 @@
       </div>
 
       <form id="chat-form">
+        <button type="reset">Reset</button>
         <button type="button" id="fileInput" onclick="getFile()">
-          Click to select file
+          Click or drop your file
         </button>
         <input id="message-input" placeholder="Enter a message..." />
         <button type="submit">Send</button>
